[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandx-compute"
version = "0.1.1"
description = "Distributed compute orchestration for the SandX platform"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "SandX Lab", email = "research@sandx.io" }]
requires-python = ">=3.10"
keywords = ["distributed-compute", "orchestration", "infrastructure", "sandx"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "ruff"]

[project.urls]
Homepage   = "https://sandx.io"
Repository = "https://github.com/sandxlab/sandx-compute"

[tool.setuptools.packages.find]
where = ["src"]
